# bachelorsSoft

./: CMakeLists.txt
darknet/: darknet
include/: SystemRus5x7.h  config_manager.h  display.h  image_processing.h  sound.h
src/: config_manager.cpp  display.cpp  image_processing.cpp  main.cpp  sound.cpp
